force-app/main/default/objects/AB4CD__BuilderComp__c/AB4CD__BuilderComp__c.object-meta.xml
<CustomObject>
    <label>BuilderComp</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>BID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BuilderComps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>