force-app/main/default/objects/AB4CD__BuilderComp__c/fields/AB4CD__Payload__c.field-meta.xml
<CustomField>
    <fullName>AB4CD__Payload__c</fullName>
    <label>Payload</label>
    <length>35000</length>
    <type>LongTextArea</type>
</CustomField>