force-app/main/default/objects/AB4CD__BuilderComp__c/fields/AB4CD__Reference__c.field-meta.xml
<CustomField>
    <fullName>AB4CD__Reference__c</fullName>
    <label>Reference</label>
    <length>150</length>
    <type>Text</type>
</CustomField>