force-app/main/default/objects/AB4CD__BuilderComp__c/fields/AB4CD__Type__c.field-meta.xml
<CustomField>
    <fullName>AB4CD__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VF</fullName>
            </value>
            <value>
                <fullName>LC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>